# node-is-hidden-path

./: .gitignore  Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: CI.yml
.pnpm-store/v10/files/00/: 19e00ea632d62d2926010926f4cf33b2e146585f63b689fc51c61674b5da9b0ee626553ac2f552f0cd69fc849194ad607cb1830a72c1eba820f8f610381bc0-exec  61a8646b26d16deb6ed9705454917d48d7f784becdccf24aac2efce3e3c46b7b6fa74e6bb92c2e568c7ef217538b6bc865d518245bebeba92c47f43b0050fc-exec  783ce68d26e8508ef044a24da12c7e63e598acb8da73820ec0759c65ae7c31deff6d5102e7e0202e696255dc15e1956303c506537f033cd732d37b2e607c6d-exec
.pnpm-store/v10/files/0a/: ffc4b0e0a3586c42e117421f8b11c5365df5fc15556b5a3b6d44a3330382ceb731b2afe762d33a67e358b4029d32ff456c0dee3c9dc6bbba6f842cf102f668-exec
__test__/: index.spec.ts
benchmark/: bench.mjs
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs
(+372 files in other folders)
