[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name    = "is-hidden-path"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi        = "2"
napi-derive = "2"
windows     = { version = "0.59.0", features = ["Win32_Storage_FileSystem"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
