[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name    = "is-hidden-path"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi        = "2"
napi-derive = "2"
windows     = { version = "0.59.0", features = ["Win32_Storage_FileSystem"] }

[build-dependencies]
napi-build = "2"

[profile.release]
codegen-units = 1       # 允许 LLVM 执行更好的优化。
lto           = true    # 启用链接时优化。
opt-level     = 3       # 优先考虑小的二进制文件大小。如果您更喜欢速度，请使用 `3`。
panic         = "abort" # 通过禁用 panic 处理程序来提高性能。
strip         = true    # 确保移除调试符号。
